# CMakeGL

./: CMakeLists.txt  Win-Build-VS-17.bat
b/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeGL.sln  CMakeGL.vcxproj  CMakeGL.vcxproj.filters  GLAD.vcxproj  GLAD.vcxproj.filters  STB_IMAGE.vcxproj  STB_IMAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
b/CMakeGL.dir/Debug/CMakeGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
b/Debug/: GLAD.lib  STB_IMAGE.lib
b/GLAD.dir/Debug/GLAD.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.write.1.tlog
b/STB_IMAGE.dir/Debug/STB_IMAGE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  STB_IMAGE.lastbuildstate
b/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
b/configuration/: root_directory.h
includes/imgui/: imgui_demo.cpp
includes/learnopengl/: camera.h  shader_m.h
resources/objects/cube/: cube.fbx
resources/objects/mutant/FBX 2013/: mutant.fbx
resources/shaders/main_pipeline/: g_buffer.fs
src/: Main.cpp
src/assets/shaders/: 8.1.deferred_light_box.fs  8.1.deferred_shading.fs  8.1.g_buffer.fs  8.1.g_buffer.vs  motion_blur.fs  sky_box.fs  sky_box.vs  sky_box_pass.fs
src/core/AssetImporter/: cAssetImporter.cpp  cAssetImporter.h
src/core/Material/: cMaterial.cpp  cMaterial.h  sTexture.h
src/core/Mesh/: cMesh.cpp  cMesh.h  cStaticMesh.cpp  cStaticMesh.h  sVertex.h
src/core/SkyBox/: cSkyBox.cpp  cSkyBox.h
src/core/UI/: UI.cpp  UI.h
src/core/fbo/: cFBO.h  cFbo.cpp
